# compression_streamer

./: .gitignore  CMakeLists.txt
build-streamer/: CMakeLists.txt
compression_streamer/: arg_parser.cpp  arg_parser.h  client.cpp  client.h  compression_streamer.pro  configurator.cpp  configurator.h  cv_video_source.cpp  cv_video_source.h  ipc_manager.cpp  ipc_manager.h  ipc_video_source.cpp  ipc_video_source.h  main.cpp  paginator.h  posix_mqueue.cpp  posix_mqueue.h  posix_semaphore.cpp  posix_semaphore.h  posix_shmem.cpp  posix_shmem.h  server.cpp  server.h  stream_timing_stat.cpp  stream_timing_stat.h  stream_traffic_stat.cpp  stream_traffic_stat.h  synchronized.h  transport_protocol.cpp  transport_protocol.h  video_codec.cpp  video_codec.h  video_receiver.cpp  video_receiver.h  video_source.cpp  video_source.h  video_streamer.cpp  video_streamer.h
streamer_scripts/: client.py  ipc_manager.py  posix_mqueue.py  posix_semaphore.py  posix_shmem.py  requirements.txt  server.py  test_pattern_generator.py
